# rustkan

./: .gitignore  Cargo.toml  LICENSE.md  README.md  clean  install
.github/workflows/: release.yml
example/: index.html
public/: config.toml  kanboard.html
src/: kanban.css  main.rs  tests.rs
test/: board.csv  config.toml
