[package]
name = "static-kanboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.11", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0.145", features= ["derive"] }
toml = "0.5.9"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
